--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="ongoing_events">Ongoing Events</string>
     <string name="passed_events">Passed Events</string>
     <string name="annual_events">Annual Events</string>
+    <string name="fivestar_hotels">Five Stars</string>
+    <string name="cheap_hotels">Cheap Hotels</string>
+    <string name="news">News</string>
+    <string name="destinations">Destinations</string>
+    <string name="events">Events</string>
+    <string name="accomodations">Accomodations</string>
 </resources>
